--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,6 @@
         android:theme="@style/Theme.Wheelify"
         tools:targetApi="31">
 
-        <!-- Menambahkan SplashScreenActivity sebagai LAUNCHER -->
         <activity
             android:name=".splashscreen.SplashScreenActivity"
             android:exported="true">
@@ -23,11 +22,9 @@
             </intent-filter>
         </activity>
 
-        <!-- MainActivity tetap ada setelah SplashScreenActivity -->
         <activity
             android:name=".MainActivity"
-            android:exported="true"
-            android:label="@string/app_name" />
+            android:exported="true" />
 
     </application>
 </manifest>
