--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,19 +14,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Wheelify"
         tools:targetApi="31">
-
+        <activity
+            android:name=".ui.about.AboutActivity"
+            android:exported="false" />
         <activity
             android:name=".splashscreen.SplashScreenActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".MainActivity"
             android:exported="true" />
-
     </application>
+
 </manifest>
